Cambios en Entrevistas y Configuracion de la Prueba Holland

--- a/src/sagaco/AdminBundle/Resources/views/clHollanConfiguracion/mostrar.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clHollanConfiguracion/mostrar.html.twig
@@ -17,7 +17,7 @@
         
             <fieldset>
                 {# Titulo del requisito #}
-                <legend>Detalle configuracion holland
+                <legend>Detalle configuración holland
                     <div class="pull-right">
                         {{ form(delete_form) }}
                     </div> 
