--- a/src/sagaco/AdminBundle/Resources/views/clHollanConfiguracion/registrar.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clHollanConfiguracion/registrar.html.twig
@@ -6,7 +6,7 @@
     <div class="container navbar-blanca">                
         <ul class="breadcrumb-modi">
             <li><a href="#"><small>Inicio</small></a></li>
-            <li><a href="{{ path('pgHollanConfiguracion') }}"><small>Configuracion Holland</small></a></li>
+            <li><a href="{{ path('pgHollanConfiguracion') }}"><small>Configuración Holland</small></a></li>
             <li class="active"><small>Crear</small></li>
         </ul>                              
     </div> 
@@ -17,7 +17,7 @@
         
             <fieldset>
                 {# Titulo del requisito #}
-                <legend>Crear configuracion holland
+                <legend>Crear configuración holland
                     <div class="pull-right">
                         <a href="{{ path('pgHollanConfiguracion') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
                             <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
