--- a/src/sagaco/AdminBundle/Resources/views/clHollanConfiguracion/editar.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clHollanConfiguracion/editar.html.twig
@@ -6,7 +6,7 @@
     <div class="container navbar-blanca">                
         <ul class="breadcrumb-modi">
             <li><a href="#"><small>Inicio</small></a></li>
-            <li><a href="{{ path('pgHollanConfiguracion') }}"><small>Configuracion Holland</small></a></li>
+            <li><a href="{{ path('pgHollanConfiguracion') }}"><small>Configuración Holland</small></a></li>
             <li class="active"><small>Actualizar</small></li>
         </ul>                              
     </div> 
@@ -17,7 +17,7 @@
         
             <fieldset>
                 {# Titulo del requisito #}
-                <legend>Actualizar Configuracion Holland
+                <legend>Actualizar Configuración Holland
                     <div class="pull-right">
                         {{ form(delete_form) }}
                     </div> 
