--- a/src/sagaco/AdminBundle/Resources/views/clHollanConfiguracion/index.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clHollanConfiguracion/index.html.twig
@@ -6,7 +6,7 @@
     <div class="container navbar-blanca">                
         <ul class="breadcrumb-modi">
             <li><a href="#"><small>Inicio</small></a></li>
-            <li class="active"><small>Configuracion holland</small></li>
+            <li class="active"><small>Configuración holland</small></li>
         </ul>                              
     </div> 
     {% endblock %}{#-- Fin Barra de ruta --#}
@@ -15,7 +15,7 @@
     {% block twigformulario %}
         <fieldset>
                 {# Titulo del requisito #}
-                <legend>Listar configuracion holland
+                <legend>Listar configuración holland
                     <div class="pull-right">
                         <a href="{{ path('pgHollanConfiguracion_registrar') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Crear">
                             <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
