--- a/src/sagaco/EntrevistaBundle/Resources/views/clEntrevista/index.html.twig
+++ b/src/sagaco/EntrevistaBundle/Resources/views/clEntrevista/index.html.twig
@@ -14,8 +14,9 @@
     {# Campos de la Forma #}
     {% block twigformulario %}
         <fieldset>
+            <form role='form' action='/sagaco/web/app_dev/pgEntrevista/' name='wtf'>
                 {# Titulo del requisito #}
-                <legend>Listar entrevista
+                <legend>Entrevista de contacto
                     <div class="pull-right">
                         <a href="{{ path('pgEntrevista_registrar') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Crear">
                             <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
@@ -25,13 +26,79 @@
                 {{ bootstrap_set_style('horizontal') }}
     
                 {#Muestra los campos del formulario#} 
-                    <div class="table-responsive">
-                        <table class="table table-bordered table-striped table-condensed">
-                            <thead>                            
-                                <tr>
-                                    {# sorting of properties based on query components #}
-                                    <th>{{ knp_pagination_sortable(objPagina, 'Id', 'a.coEntrevista') }}</th>
-                                    <th>{% if objPagina.isSorted('a.txMotivoIndividual') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, '¿Qué lo motivó a solicitar la Atención Individual?', 'a.nbGrupoRol') }}</th>
+                <div class='form-horizontal'>
+                    <div class='form-group'>
+                        <div class='col-xs-2 col-sm-2 col-md-2 col-lg-2'><strong>Nombre y Apellido:</strong></div>
+                        <div class='col-xs-10 col-sm-10 col-md-10 col-lg-10'>{{ 'Jorge ' }}{{ 'Duque' }}</div>                    
+                    </div> 
+                    <div class='form-group'>
+                        <div class='col-xs-1 col-sm-1 col-md-1 col-lg-1'><strong>Sexo:</strong></div>
+                        <div class='col-xs-2 col-sm-2 col-md-2 col-lg-2'>{{ 'M' }}</div>  
+                        <div class='col-xs-1 col-sm-1 col-md-1 col-lg-1'><strong>Edad:</strong></div>
+                        <div class='col-xs-2 col-sm-2 col-md-2 col-lg-2'>{{ '28' }}</div>
+                        <div class='col-xs-1 col-sm-1 col-md-1 col-lg-1'><strong>Nacionalidad:</strong></div>
+                        <div class='col-xs-2 col-sm-2 col-md-2 col-lg-2'>{{ 'V' }}</div>
+                        <div class='col-xs-1 col-sm-1 col-md-1 col-lg-1'><strong>C.I:</strong></div>
+                        <div class='col-xs-2 col-sm-2 col-md-2 col-lg-2'>{{ '17.810.037' }}</div>
+                    </div>
+                    <div class='form-group'>
+                        <div class='col-xs-2 col-sm-2 col-md-2 col-lg-2'><strong>Dirección:</strong></div>
+                        <div class='col-xs-10 col-sm-10 col-md-10 col-lg-10'>{{ 'Urb. Altos de Pirineos' }}</div>                    
+                    </div> 
+                    <div class='form-group'>
+                        <div class='col-xs-2 col-sm-2 col-md-2 col-lg-2'><strong>Teléfono:</strong></div>
+                        <div class='col-xs-10 col-sm-10 col-md-10 col-lg-10'>{{ '0276 3558023' }}</div>                    
+                    </div>
+                    <div class='form-group'>
+                        <div class='col-xs-2 col-sm-2 col-md-2 col-lg-2'><strong>Especialidad/Personal:</strong></div>
+                        <div class='col-xs-10 col-sm-10 col-md-10 col-lg-10'>{{ 'Administrativo' }}</div>                    
+                    </div>
+                    
+                    <div class='form-group'>
+                        <div class='col-xs-12 col-sm-12 col-md-12 col-lg-12'><strong>1. Historia del Asesorado:</strong></div>
+                    </div>
+                    <div class='form-horizontal'>
+                        <input id='form_text' class='form-control' type='text' required='required' name='form[text]'></input>                    
+                    </div>
+                    <div class='form-group'>
+                        <div class='col-xs-12 col-sm-12 col-md-12 col-lg-12'><strong>2. Datos Generales:</strong></div>
+                    </div>
+                    <div class='form-group'>
+                        <div class='col-xs-8 col-sm-8 col-md-8 col-lg-8'><strong>2.1 ¿Qué lo motivó a solicitar la Atención Individual?</strong></div>
+                    </div>
+                    <div class='form-horizontal'>
+                        <input id='form_text' class='form-control' type='text' required='required' name='form[text]'></input>                    
+                    </div>
+                    <div class='form-group'>
+                        <div class='col-xs-8 col-sm-8 col-md-8 col-lg-8'><strong>2.2 ¿Qué se siente al solicitar esa atención? Describa</strong></div>
+                    </div>
+                    <div class='form-horizontal'>
+                        <input id='form_text' class='form-control' type='text' required='required' name='form[text]'></input>                    
+                    </div>
+                    <div class='form-group'>
+                        <div class='col-xs-8 col-sm-8 col-md-8 col-lg-8'><strong>2.3 Su solicitud es ¿Espontánea? </strong></div>
+                    </div>
+                    <div class='form-horizontal'>
+                        <input type='checkbox'> Si selecciona significa que sí
+                    </div>
+                    <div class='form-group'>
+                        <div class='col-xs-8 col-sm-8 col-md-8 col-lg-8'><strong>3. Tratamiento o Recomendaciones</strong></div>
+                    </div>
+                    <div class='form-horizontal'>
+                        <input id='form_text' class='form-control' type='text' required='required' name='form[text]'></input>                    
+                    </div>
+                    <div class='form-group'>
+                        <div class='col-xs-8 col-sm-8 col-md-8 col-lg-8'><strong>4. Observaciones</strong></div>
+                    </div>
+                    <div class='form-horizontal'>
+                        <input id='form_text' class='form-control' type='text' required='required' name='form[text]' style="width:1100px;height:34px"</input>                    
+                    </div>
+                    {#<div class="form-signin">
+                        {#<table class="table table-bordered table-striped table-condensed">#}
+                            {#<thead>                            
+                                <tr>#}
+                                    {# sorting of properties 5based on query components #}
+                                    {#<th>{% if objPagina.isSorted('a.txMotivoIndividual') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, '¿Qué lo motivó a solicitar la Atención Individual?', 'a.nbGrupoRol') }}</th>
                                     <th>{% if objPagina.isSorted('a.txMotivoEntrevista') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, '¿Qué espera con la atención que solicita?', 'a.nbGrupoRol') }}</th>
                                     <th>{% if objPagina.isSorted('a.inSoliciEspontanea') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, '¿Espontánea? (1=si y 0=no)', 'a.nbGrupoRol') }}</th>
                                     <th>{% if objPagina.isSorted('a.txTratamiento') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Tratamiento o Recomendaciones', 'a.nbGrupoRol') }}</th>
@@ -59,16 +126,23 @@
                                 </tr>
                             {% endfor %}
                             </tbody>
-                        </table>
+                        </table>#}
+                </div>
+                    {#{{ form_start(form() }}
+                        {{ form_row(edit_form.txMotivoIndividual, {'label': '¿Qué lo motivó a solicitar la Atención Individual?'}) }}
+                        {{ form_row(edit_form.txMotivoEntrevista, {'label': '¿Qué espera con la atención que solicita?'}) }}
+                        {{ form_row(edit_form.inSoliciEspontanea, {'label': '¿Espontánea? (1=si y 0=no)'}) }}
+                        {{ form_row(edit_form.txTratamiento, {'label': 'Tratamiento o Recomendaciones'}) }}
+                        {{ form_row(edit_form.txObservacion, {'label': 'Observaciones'}) }}
+                    {{ form_end(form) }}#}
+                <div class="row">                        
+                    <div class="col-sm-9 col-md-6 col-lg-8">
+                        <p> <strong>Resultado: </strong>{{ objPagina.getTotalItemCount }} filas</p>
                     </div>
-                    
-                    <div class="row">                        
-                        <div class="col-sm-9 col-md-6 col-lg-8">
-                            <p> <strong>Resultado: </strong>{{ objPagina.getTotalItemCount }} filas</p>
-                        </div>
-                        <div class="col-sm-3 col-md-6 col-lg-4 pull-right">
-                            {{ knp_pagination_render(objPagina) }}
-                        </div>
-                    </div>                    
-                </fieldset>   
+                    <div class="col-sm-3 col-md-6 col-lg-4 pull-right">
+                        {{ knp_pagination_render(objPagina) }}
+                    </div>
+                </div>
+             </form>     
+        </fieldset>   
     {% endblock %}{#-- Fin Campos de la Forma #}
