--- a/src/sagaco/AdminBundle/Resources/views/clOrientador/index.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clOrientador/index.html.twig
@@ -48,17 +48,19 @@
                     {% endif %}    
                     {% for objEntidad in objPagina %}
                         <tr {% if loop.index is odd %}class="color"{% endif %}>
-                            <td class="text-right"><a href="{{ path('pgEstado_mostrar', { 'id': objEntidad.coEstado, 'blnBandera': '0'}) }}">{{ objEntidad.coEstado }}</a></td>
-                            <td>{{ objEntidad.coPais }}</td>
-                            <td>{{ objEntidad.txIniciaEstado }}</td>
-                            <td>{{ objEntidad.nbEstado }}</td>
+                            <td class="text-right"><a href="{{ path('pgOrientador_mostrar', { 'id': objEntidad.coOrientador, 'blnBandera': '0'}) }}">{{ objEntidad.coOrientador }}</a></td>
+                            <td>{{ objEntidad.txProfesion }}</td>
+                            <td>{{ objEntidad.txCarrerAtendida }}</td>
+                            <td>{{ objEntidad.txPeriodVigencia }}</td>
+                            <td>{{ objEntidad.txComentario }}</td>
+                            <td>{{ objEntidad.coRecursHumano }}</td>
                             <td>{% if objEntidad.fhCreacion %}{{ objEntidad.fhCreacion|date('d-m-Y H:i:s') }}{% endif %}</td>
                             <td>{% if objEntidad.fhActualizacion %}{{ objEntidad.fhActualizacion|date('d-m-Y H:i:s') }}{% endif %}</td>
                             <td> 
-                                <a href="{{ path('pgEstado_mostrar', { 'id': objEntidad.coEstado, 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
+                                <a href="{{ path('pgOrientador_mostrar', { 'id': objEntidad.coOrientador, 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
                                     <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                 </a>                                    
-                                <a href="{{ path('pgEstado_editar', { 'id': objEntidad.coEstado }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
+                                <a href="{{ path('pgOrientador_editar', { 'id': objEntidad.coOrientador }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
                                     <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                                 </a>                                 
                             </td>
