--- a/src/sagaco/AdminBundle/Resources/views/clRecursHumano/index.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clRecursHumano/index.html.twig
@@ -1,12 +1,12 @@
 {% extends '::plantilla.html.twig' %}
 
-{% block id 'angeliconfiguracion' %}
+{% block id 'recurshumano' %}
     {# Barra de ruta #}
     {% block ruta %}
     <div class="container navbar-blanca">                
         <ul class="breadcrumb-modi">
             <li><a href="#"><small>Inicio</small></a></li>
-            <li class="active"><small>Configuración Angelini</small></li>
+            <li class="active"><small>Personal UNET</small></li>
         </ul>                              
     </div> 
     {% endblock %}{#-- Fin Barra de ruta --#}
@@ -15,9 +15,9 @@
     {% block twigformulario %}
         <fieldset>
                 {# Titulo del requisito #}
-                <legend>Listar configuración angelini
+                <legend>Listar personal UNET
                     <div class="pull-right">
-                        <a href="{{ path('pgAngeliConfiguracion_registrar') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Crear">
+                        <a href="{{ path('pgRecursHumano_registrar') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Crear">
                             <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
                         </a>                          
                     </div>
@@ -30,11 +30,10 @@
                             <thead>                            
                                 <tr>
                                     {# sorting of properties based on query components #}
-                                    <th>{{ knp_pagination_sortable(objPagina, 'Id', 'a.coAngeliConfiguracion') }}</th>
-                                    <th>{% if objPagina.isSorted('a.coAngeliInteres') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Interes', 'a.nbGrupoRol') }}</th>
-                                    <th>{% if objPagina.isSorted('a.nuCuadro') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Nu. Cuadro', 'a.nbGrupoRol') }}</th>
-                                    <th>{% if objPagina.isSorted('a.txLetra') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Letra', 'a.nbGrupoRol') }}</th>
-                                    <th>{% if objPagina.isSorted('a.txDescripcion') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Descripción', 'a.nbGrupoRol') }}</th>
+                                    <th>{{ knp_pagination_sortable(objPagina, 'Id', 'a.coRecursHumano') }}</th>
+                                    <th>{% if objPagina.isSorted('a.txPrimerNombre') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Nombre', 'a.nbGrupoRol') }}</th>
+                                    <th>{% if objPagina.isSorted('a.txPrimerApellido') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Apellido', 'a.nbGrupoRol') }}</th>
+                                    <th>{% if objPagina.isSorted('a.txCargo') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Personal', 'a.nbGrupoRol') }}</th>
                                     <th>F. Creación</th>
                                     <th>F. Actualización</th>
                                     <th>Acción</th>                                
@@ -43,18 +42,17 @@
                             <tbody>
                             {% for objEntidad in objPagina %}
                                 <tr {% if loop.index is odd %}class="color"{% endif %}>
-                                    <td class="text-right"><a href="{{ path('pgAngeliConfiguracion_mostrar', { 'id': objEntidad.coAngeliConfiguracion, 'blnBandera': '0'}) }}">{{ objEntidad.coAngeliConfiguracion }}</a></td>
-                                    <td>{{ objEntidad.coAngeliInteres }}</td>
-                                    <td>{{ objEntidad.nuCuadro }}</td>
-                                    <td>{{ objEntidad.txLetra }}</td>
-                                    <td>{{ objEntidad.txDescripcion }}</td>
+                                    <td class="text-right"><a href="{{ path('pgRecursHumano_mostrar', { 'id': objEntidad.coRecursHumano, 'blnBandera': '0'}) }}">{{ objEntidad.coRecursHumano }}</a></td>
+                                    <td>{{ objEntidad.txPrimerNombre }}</td>
+                                    <td>{{ objEntidad.txPrimerApellido }}</td>
+                                    <td>{{ objEntidad.txCargo }}</td>
                                     <td>{% if objEntidad.fhCreacion %}{{ objEntidad.fhCreacion|date('d-m-Y H:i:s') }}{% endif %}</td>
                                     <td>{% if objEntidad.fhActualizacion %}{{ objEntidad.fhActualizacion|date('d-m-Y H:i:s') }}{% endif %}</td>
                                     <td> 
-                                        <a href="{{ path('pgAngeliConfiguracion_mostrar', { 'id': objEntidad.coAngeliConfiguracion, 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
+                                        <a href="{{ path('pgRecursHumano_mostrar', { 'id': objEntidad.coRecursHumano, 'blnBandera': '0' }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Mostrar detalle">
                                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                         </a>                                    
-                                        <a href="{{ path('pgAngeliConfiguracion_editar', { 'id': objEntidad.coAngeliConfiguracion }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
+                                        <a href="{{ path('pgRecursHumano_editar', { 'id': objEntidad.coRecursHumano }) }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Editar">
                                             <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                                         </a>                                 
                                     </td>
