--- a/src/sagaco/AdminBundle/Resources/views/clRecursHumano/registrar.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clRecursHumano/registrar.html.twig
@@ -1,12 +1,12 @@
 {% extends '::plantilla.html.twig' %}
 
-{% block id 'benefiestudiante' %}
+{% block id 'recurshumano' %}
    
     {% block ruta %}
     <div class="container navbar-blanca">                
         <ul class="breadcrumb-modi">
             <li><a href="#"><small>Inicio</small></a></li>
-            <li><a href="{{ path('pgBenefiEstudiante') }}"><small>Motivo consulta</small></a></li>
+            <li><a href="{{ path('pgRecursHumano') }}"><small>Personal UNET</small></a></li>
             <li class="active"><small>Crear</small></li>
         </ul>                              
     </div> 
@@ -17,9 +17,9 @@
         
             <fieldset>
                 {# Titulo del requisito #}
-                <legend>Crear motivo consulta
+                <legend>Crear personal UNET
                     <div class="pull-right">
-                        <a href="{{ path('pgBenefiEstudiante') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
+                        <a href="{{ path('pgRecursHumano') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
                             <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
                         </a>                       
                     </div>
@@ -29,22 +29,21 @@
                 {{ form_start(form, { 'style': 'horizontal' }) }}
                     {{ form_errors(form, { 'global_errors': true }) }}
                     {{ form_row(form._token) }}
-                    {{ form_row(form.coControEstudio, {'label': 'Nombre del estudiante'}) }}                    
                     {{ form_row(form.nuCedula, {'label': 'Número de cédula'}) }}
                     {{ form_row(form.inNacionalidad, {'label': 'Nacionalidad'}) }}                    
                     {{ form_row(form.txPrimerNombre, {'label': 'Primer nombre'}) }}
                     {{ form_row(form.txSegundNombre, {'label': 'Segundo nombre'}) }}                    
                     {{ form_row(form.txPrimerApellido, {'label': 'Primer apellido'}) }}
                     {{ form_row(form.txSegundApellido, {'label': 'Segundo apellido'}) }}                    
-                    {{ form_row(form.coCiudad, {'label': 'Ciudad donde vive'}) }}
-                    {{ form_row(form.coEstadoCivil, {'label': 'Estado civil'}) }}                    
-                    {{ form_row(form.coGenero, {'label': 'Género'}) }}
-                    {{ form_row(form.coParentesco, {'label': 'Parentesco'}) }}                    
-                    {{ form_row(form.txDireccion1, {'label': 'Dirección principal'}) }}
-                    {{ form_row(form.txDireccion2, {'label': 'Dirección opcional'}) }}                    
-                    {{ form_row(form.txTelefoCasa, {'label': 'Teléfono casa'}) }}
-                    {{ form_row(form.txTelefoCelular, {'label': 'Teléfono celular'}) }}                    
+                    {{ form_row(form.inSexo, {'label': 'Sexo'}) }}
+                    {{ form_row(form.inEstadoCivil, {'label': 'Estado civil'}) }}                    
+                    {{ form_row(form.txCargo, {'label': 'Personal'}) }}
                     {{ form_row(form.txCorreoElectronico, {'label': 'Correo electrónico'}) }}
+                    {{ form_row(form.txTelefoHabitacion, {'label': 'Teléfono habitación'}) }}
+                    {{ form_row(form.txTelefoCelular, {'label': 'Teléfono celular'}) }}                    
+                    {{ form_row(form.txTelefoOficina, {'label': 'Teléfono oficina'}) }}                    
+                    {{ form_row(form.txLugarResidencia, {'label': 'Dirección residencia'}) }}
+                    {{ form_row(form.feNacimiento, {'label': 'Fecha nacimiento'}) }}                    
                 {{ form_end(form) }}                
             </fieldset>         
             
