--- a/src/sagaco/EntrevistaBundle/Resources/views/clEntrevConsecuentes/registrar.html.twig
+++ b/src/sagaco/EntrevistaBundle/Resources/views/clEntrevConsecuentes/registrar.html.twig
@@ -1,12 +1,12 @@
 {% extends '::plantilla.html.twig' %}
 
-{% block id 'entrevista' %}
+{% block id 'entrevcontacto' %}
    
     {% block ruta %}
     <div class="container navbar-blanca">                
         <ul class="breadcrumb-modi">
             <li><a href="#"><small>Inicio</small></a></li>
-            <li><a href="{{ path('pgEntrevista') }}"><small>Entrevista</small></a></li>
+            <li><a href="{{ path('pgEntrevContacto') }}"><small>Entrevista de contacto</small></a></li>
             <li class="active"><small>Crear</small></li>
         </ul>                              
     </div> 
@@ -17,9 +17,9 @@
         
             <fieldset>
                 {# Titulo del requisito #}
-                <legend>Crear entrevista
+                <legend>Crear entrevista de contaco
                     <div class="pull-right">
-                        <a href="{{ path('pgEntrevista') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
+                        <a href="{{ path('pgEntrevContacto') }}" class="btn btn-xs" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Regresar al listado">
                             <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
                         </a>                       
                     </div>
