Agregar nueva clase clAgendaController desde CitaBundle Signed-off-by:Jhanmara Duque <jyduque@unet.edu.ve>

--- a/src/sagaco/AdminBundle/Resources/views/clOrientador/index.html.twig
+++ b/src/sagaco/AdminBundle/Resources/views/clOrientador/index.html.twig
@@ -34,7 +34,7 @@
                             <th>{% if objPagina.isSorted('a.txCarrerAtendida') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Carrera atendida', 'a.nbGrupoRol') }}</th>
                             <th>{% if objPagina.isSorted('a.txPeriodVigencia') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Periodo de vigencia', 'a.nbGrupoRol') }}</th>
                             <th>{% if objPagina.isSorted('a.txComentario') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Comentario', 'a.nbGrupoRol') }}</th>
-                            <th>{% if objPagina.isSorted('a.coRecursHumano') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Nombre del orientador', 'a.nbGrupoRol') }}</th>
+                            <th>{% if objPagina.isSorted('a.coRecursHumano') %} class="sorted"{% endif %}{{ knp_pagination_sortable(objPagina, 'Orientador', 'a.nbGrupoRol') }}</th>
                             <th>F. Creación</th>
                             <th>F. Actualización</th>
                             <th>Acción</th>                                
