--- a/web/css/bootstrap_modi.css
+++ b/web/css/bootstrap_modi.css
@@ -15,7 +15,7 @@ body {
 
 @media screen and (max-width: 980px) {
   body {
-    padding-top: 165x;
+    padding-top: 165px;
     padding-bottom: 0px;
   }
 }
